--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,12 @@
 {
-    "version": 2,
-    "builds": [
+    "buildCommand": "cd frontend && npm install && npm run build",
+    "outputDirectory": "frontend/dist",
+    "installCommand": "npm install --prefix backend && npm install --prefix frontend",
+    "framework": null,
+    "rewrites": [
         {
-            "src": "backend/index.js",
-            "use": "@vercel/node"
-        },
-        {
-            "src": "frontend/package.json",
-            "use": "@vercel/static-build",
-            "config": {
-                "distDir": "frontend/dist"
-            }
-        }
-    ],
-    "routes": [
-        {
-            "src": "/api/(.*)",
-            "dest": "backend/index.js"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "frontend/$1"
+            "source": "/api/(.*)",
+            "destination": "/api"
         }
     ]
 }
