--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
     "buildCommand": "cd frontend && npm install && npm run build",
     "outputDirectory": "frontend/dist",
-    "installCommand": "npm install --prefix backend && npm install --prefix frontend",
+    "installCommand": "npm install && npm install --prefix backend && npm install --prefix frontend",
     "framework": null,
     "rewrites": [
         {
             "source": "/api/(.*)",
-            "destination": "/api"
+            "destination": "/api/index.js"
         }
     ]
 }
