--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,5 @@
     "buildCommand": "cd frontend && npm install && npm run build",
     "outputDirectory": "frontend/dist",
     "installCommand": "npm install && npm install --prefix backend && npm install --prefix frontend",
-    "framework": null,
-    "rewrites": [
-        {
-            "source": "/api/(.*)",
-            "destination": "/api/index.js"
-        }
-    ]
+    "framework": null
 }
